# turtlebot3_drlnav

./: .gitignore  Dockerfile  README.md  spawn_goal.sh
src/turtlebot3_drl/: README.md  package.xml  setup.cfg  setup.py
src/turtlebot3_drl/model/examples/ddpg_0/: _hyperparams_20220808-030634.txt  _test_stage9_eps8000_20221214-140423.txt  target_actor_stage9_episode8000.pt  target_critic_stage9_episode8000.pt
src/turtlebot3_drl/model/examples/ddpg_0_stage9/: _hyperparams_20220808-030634.txt  _test_stage1_eps8000_20230501-183843.txt  _test_stage4_eps8000_20221214-143249.txt  _test_stage8_eps8000_20221214-134026.txt  _test_stage8_eps8000_20221214-134411.txt  _test_stage8_eps8000_20221214-134609.txt  _test_stage8_eps8000_20221214-135143.txt  _test_stage9_eps8000_20221214-135936.txt  _train_stage9_20220808-030634.txt  actor_stage9_episode8000.pt  critic_stage9_episode8000.pt
src/turtlebot3_drl/model/examples/td3_0/: _test_stage4_eps7400_20221214-153620.txt  _test_stage8_eps7400_20221214-135334.txt  _test_stage8_eps7400_20221214-135415.txt  _test_stage8_eps7400_20221214-135517.txt  _test_stage8_eps7400_20221214-135530.txt  _train_stage9_20221003-130835.txt  actor_stage9_episode7400.pt  critic_stage9_episode7100.pt  stage9_episode7400.pkl
src/turtlebot3_drl/model/examples/td3_0_stage9/: _hyperparams_20221003-130835.txt  critic_stage9_episode7400.pt  target_actor_stage9_episode7400.pt  target_critic_stage9_episode7400.pt
src/turtlebot3_drl/turtlebot3_drl/common/: graph.py  logger.py  ounoise.py  replaybuffer.py  settings.py  storagemanager.py  utilities.py  visual.py
src/turtlebot3_drl/turtlebot3_drl/drl_agent/: ddpg.py  dqn.py  drl_agent.py  off_policy_agent.py  sac.py  td3.py
src/turtlebot3_drl/turtlebot3_drl/drl_environment/: drl_environment.py  drl_environment_real.py  reward.py
src/turtlebot3_drl/turtlebot3_drl/drl_gazebo/: drl_gazebo.py
src/turtlebot3_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/turtlebot3_msgs/action/: Patrol.action
src/turtlebot3_msgs/msg/: SensorState.msg  Sound.msg  VersionInfo.msg
src/turtlebot3_msgs/srv/: DrlStep.srv  Goal.srv  RingGoal.srv  Sound.srv
src/turtlebot3_simulations/turtlebot3_gazebo/: CMakeLists.txt
src/turtlebot3_simulations/turtlebot3_gazebo/launch/: turtlebot3_drl_stage1.launch.py  turtlebot3_drl_stage10.launch.py  turtlebot3_drl_stage2.launch.py  turtlebot3_drl_stage3.launch.py  turtlebot3_drl_stage4.launch.py  turtlebot3_drl_stage5.launch.py  turtlebot3_drl_stage6.launch.py  turtlebot3_drl_stage7.launch.py  turtlebot3_drl_stage8.launch.py  turtlebot3_drl_stage9.launch.py  turtlebot3_house.launch.py  turtlebot3_world.launch.py
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_burger/: model-1_4.sdf  model.sdf
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_drl_world/: model.config
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_drl_world/inner_obstacles/: model.config  model.sdf
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_drl_world/inner_walls/: model.config
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_drl_world/inner_walls_large/: model.sdf
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_drl_world/long_wall/: model.config  model.sdf
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_drl_world/obstacle1/: model.config  model.sdf
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_drl_world/obstacle10/: model.sdf
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_drl_world/obstacle11/: model.config
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_drl_world/obstacle12/: model.config  model.sdf
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_drl_world/obstacle2/: model.sdf
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_drl_world/obstacle3/: model.config
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_drl_world/obstacle4/: model.config
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_drl_world/obstacle5/: model.sdf
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_drl_world/obstacle8/: model.config
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_drl_world/obstacle9/: model.sdf
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_drl_world/obstacle_plugin/: CMakeLists.txt  obstacle10.cc  obstacle11.cc  obstacle12.cc  obstacle13.cc  obstacle2.cc  obstacle3.cc  obstacle4.cc  obstacle5.cc  obstacle6.cc  obstacle7.cc  obstacle8.cc  obstacle9.cc
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_drl_world/obstacle_plugin/lib/: CMakeCache.txt  Makefile  cmake_install.cmake
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_waffle/: model-1_4.sdf
src/turtlebot3_simulations/turtlebot3_gazebo/worlds/: world_test
src/turtlebot3_simulations/turtlebot3_gazebo/worlds/turtlebot3_drl_stage1/: burger.model  waffle.model  waffle_pi.model
src/turtlebot3_simulations/turtlebot3_gazebo/worlds/turtlebot3_drl_stage10/: burger.model  waffle.model  waffle_pi.model
src/turtlebot3_simulations/turtlebot3_gazebo/worlds/turtlebot3_drl_stage2/: burger.model  waffle.model  waffle_pi.model
src/turtlebot3_simulations/turtlebot3_gazebo/worlds/turtlebot3_drl_stage3/: burger.model  waffle.model  waffle_pi.model
src/turtlebot3_simulations/turtlebot3_gazebo/worlds/turtlebot3_drl_stage4/: burger.model
src/turtlebot3_simulations/turtlebot3_gazebo/worlds/turtlebot3_drl_stage5/: burger.model  waffle.model  waffle_pi.model
src/turtlebot3_simulations/turtlebot3_gazebo/worlds/turtlebot3_drl_stage6/: burger.model  waffle.model  waffle_pi.model
src/turtlebot3_simulations/turtlebot3_gazebo/worlds/turtlebot3_drl_stage7/: burger.model
src/turtlebot3_simulations/turtlebot3_gazebo/worlds/turtlebot3_drl_stage8/: burger.model
src/turtlebot3_simulations/turtlebot3_gazebo/worlds/turtlebot3_drl_stage9/: burger.model
util/: clean_single_model.py  purge_all_models.py  reward_graph.py  spawn_goal.sh  stop_robot.sh
(+9 files in other folders)
