<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_drl</name>
  <version>2.0.0</version>
  <description>
    ROS 2 package for turtlebot3_drl.
  </description>
  <author email="kkjong@robotis.com">Gilbert</author>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://wiki.ros.org/turtlebot3_machine_learning</url>
  <url type="emanual">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_machine_learning</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3_machine_learning/issues</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_srvs</depend>
  <depend>turtlebot3_msgs</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
