<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_msgs</name>
  <version>2.2.1</version>
  <description>
    Message and service types: custom messages and services for TurtleBot3 packages for ROS2
  </description>
  <license>Apache 2.0</license>
  <author email="pyo@robotis.com">Pyo</author>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="kkjong@robotis.com">Gilbert</author>
  <author email="vgh@amazon.com">Vineet Ghatge</author>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <maintainer email="willson@robotis.com">Will Son</maintainer>
  <url type="website">http://wiki.ros.org/turtlebot3_msgs</url>
  <url type="emanual">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_msgs</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3_msgs/issues</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>action_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <test_depend>ament_lint_common</test_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
